# mnist-reader-lib

./: readme.txt
src/argsparser-lib/: CMakeLists.txt  pom.xml
src/argsparser-lib/src/main/c/: main.cpp
src/argsparser-lib/src/main/include/argsparser/: OptionParser.h  OptionParserArgs.h
src/argsparser-lib/src/test/c/: main-test.cpp
src/coutlogger-lib/: CMakeLists.txt  pom.xml
src/coutlogger-lib/src/main/c/: main.cpp
src/coutlogger-lib/src/main/include/coutlogger/: coutlogger.h
src/coutlogger-lib/src/test/c/: main-test.cpp
src/file-lib/: CMakeLists.txt  pom.xml
src/file-lib/src/main/c/: main.cpp
src/file-lib/src/main/include/: main.h
src/file-lib/src/main/include/file/: File.h
src/file-lib/src/test/c/: main-test.cpp
src/mnist-reader-lib/: CMakeLists.txt  pom.xml
src/mnist-reader-lib/src/main/c/: main.cpp
src/mnist-reader-lib/src/main/include/mnist/: reader.h
src/mnist-reader-lib/src/test/c/: main-test.cpp
